z-index fix

--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -136,7 +136,7 @@
         position: fixed;
         width: 100vw;
         top: 56px;
-        z-index: 1;
+        z-index: 100;
         padding-top: .5rem;
         padding-bottom: .5rem;
         transition: background-color 0.45s ease-out;
